--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,9 +1,11 @@
 :root {
-    --primary-color: #ef7d57;
-    --primary-color-dark: #b13e53;
-    --secondary-color: #84778a;
+    --primary: #ef7d57;
+    --primary-dark: #b13e53;
+    --secondary: #84778a;
     --secondary-color-dark: #585063;
-    --tertiary-color: #ffcd75;
+    --tertiary: #ffcd75;
+    --success: #38b764;
+    --failure: #b13e53;
     --enzyme-primary-color: #38b764;
     --enzyme-secondary-color: #a7f070;
     --molecule-primary-color: #41a6f6;
@@ -16,13 +18,13 @@
     --clicked-color: #1a1c2c;
 }
 
-.btn.btn-primary {
+/* .btn.btn-primary {
     background-color: var(--tertiary-color);
     border-color: var(--tertiary-color);
 }
 
 .btn.btn-primary:hover {
-    background-color: var(--tertiary-color-dark);
+    background-color: var(--locked-color);
     border-color: var(--tertiary-color);
 }
 
@@ -44,7 +46,7 @@
 .btn.btn-secondary:hover:active {
     background-color: var(--clicked-color);
     border-color: var(--clicked-color);
-}
+} */
 
 .App {
     text-align: center;
@@ -65,7 +67,7 @@ ul {
 
 a.card {
     margin: 8px;
-    background-color: var(--tertiary-color);
+    background-color: var(--tertiary);
 }
 
 .horizontalUl {
@@ -228,12 +230,12 @@ a.card {
 }
 .sliderBarList::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    background-color: var(--secondary-color);
+    background-color: var(--secondary);
     border-radius: 20px;
     left: 10px;
 }
 .sliderBarList::-webkit-scrollbar-thumb {
-    background: var(--tertiary-color);
+    background: var(--tertiary);
     border-radius: 20px;
     cursor: grabbing;
 }
@@ -248,7 +250,7 @@ a.card {
 }
 
 #sliderCard {
-    background-color: var(--tertiary-color);
+    background-color: var(--tertiary);
 }
 
 /* ------------------------------------------------------- */
@@ -263,7 +265,7 @@ a.card {
     display: flex;
     list-style-type: none;
     padding: 0px;
-    background-color: var(--tertiary-color);
+    background-color: var(--tertiary);
 }
 
 #cardHeaderList > li {
@@ -306,7 +308,7 @@ input[type=range]::-webkit-slider-thumb {
     width: 16px;
     border-radius: 10px;
     margin-top: -12px;
-    background: var(--tertiary-color-dark);
+    background: var(--locked-color);
     cursor: pointer;
 }
 
@@ -327,7 +329,7 @@ input[type=range]::-moz-range-thumb {
     width: 16px;
     border-radius: 10px;
     margin-top: -12px;
-    background: var(--tertiary-color-dark);
+    background: var(--locked-color);
     cursor: pointer;
 }
   
@@ -348,7 +350,7 @@ input[type=range]::-ms-thumb {
     width: 16px;
     border-radius: 10px;
     margin-top: -12px;
-    background: var(--tertiary-color-dark);
+    background: var(--locked-color);
     cursor: pointer;
 }
   
@@ -392,7 +394,7 @@ input[type=range]::-ms-fill-upper {
     width: 150px;
     height: 100px;
     /* transform: skew(20deg); */
-    background: var(--primary-color);
+    background: var(--primary);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -403,7 +405,7 @@ input[type=range]::-ms-fill-upper {
     font-size: 12px;
     width: 250px;
     height: 100px;
-    background: var(--primary-color);
+    background: var(--primary);
     border: 1px solid #555;
     border-radius: 10px;
     text-align: center;
@@ -432,7 +434,7 @@ input[type=range]::-ms-fill-upper {
     border-radius: 40%;
     width: 60px;
     height: 40px;
-    background: var(--secondary-color);
+    background: var(--secondary);
     display: flex;
     font-size: 9px;
 }
