--- a/frontend/src/scss/App.scss
+++ b/frontend/src/scss/App.scss
@@ -1,3 +1,5 @@
+@import 'index.scss';
+
 .App {
     text-align: center;
     height: 100vh;
@@ -33,7 +35,7 @@ a {
 .growButton { 
     transition: all .2s ease-in; 
 
-    :hover { 
+    &:hover { 
         transform: scale(1.05); 
     }
 }
@@ -41,7 +43,7 @@ a {
 .growCard { 
     transition: all .2s ease-in; 
 
-    :hover { 
+    &:hover { 
         transform: scale(1.03); 
     }
 }
@@ -73,7 +75,7 @@ a {
     color: inherit;
     text-decoration: none;
 
-    :hover {
+    &:hover {
         color: black;
         border-color: black;
     }
@@ -177,18 +179,18 @@ a {
     margin: 0px;
     padding: 0px;
 
-    ::-webkit-scrollbar {
+    &::-webkit-scrollbar {
         width: 20px;
     }
 
-    ::-webkit-scrollbar-track {
+    &::-webkit-scrollbar-track {
         -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
         background-color: var(--secondary);
         border-radius: 20px;
         left: 10px;
     }
 
-    ::-webkit-scrollbar-thumb {
+    &::-webkit-scrollbar-thumb {
         background: var(--tertiary);
         border-radius: 20px;
         cursor: grabbing;
@@ -224,11 +226,11 @@ a {
 }
 
 #cardHeaderList {
-    > li {
+    & > li {
         margin: 4px;
         display: inline-block;
 
-        > h4 {
+        & > h4 {
             margin-left: 8px;
         }
 
@@ -255,11 +257,11 @@ input[type=range] {
     width: 100%; /* Specific width is required for Firefox. */
     background: transparent; /* Otherwise white in Chrome */
 
-    :focus {
+    &:focus {
         outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
     }
 
-    ::-webkit-slider-thumb {
+    &::-webkit-slider-thumb {
         appearance: none;
         border: 1px solid #000000;
         height: 32px;
@@ -270,7 +272,7 @@ input[type=range] {
         cursor: pointer;
     }
 
-    ::-webkit-slider-runnable-track {
+    &::-webkit-slider-runnable-track {
         width: 100%;
         height: 8px;
         margin-top: -35px;
@@ -280,7 +282,7 @@ input[type=range] {
         border: 0.2px solid #010101;
     }
 
-    ::-moz-range-thumb {
+    &::-moz-range-thumb {
         appearance: none;
         border: 1px solid #000000;
         height: 32px;
@@ -291,7 +293,7 @@ input[type=range] {
         cursor: pointer;
     }
 
-    ::-moz-range-track {
+    &::-moz-range-track {
         width: 100%;
         height: 8px;
         margin-top: -35px;
@@ -301,7 +303,7 @@ input[type=range] {
         border: 0.2px solid #010101;
     }
 
-    ::-ms-thumb {
+    &::-ms-thumb {
         appearance: none;
         border: 1px solid #000000;
         height: 32px;
@@ -312,7 +314,7 @@ input[type=range] {
         cursor: pointer;
     }
 
-    ::-ms-track {
+    &::-ms-track {
         width: 100%;
         height: 8px;
         margin-top: -35px;
@@ -322,13 +324,13 @@ input[type=range] {
         border: 0.2px solid #010101;
     }
 
-    ::-ms-fill-lower {
+    &::-ms-fill-lower {
         background: #2a6495;
         border: 0.2px solid #010101;
         border-radius: 2.6px;
     }
 
-    ::-ms-fill-upper {
+    &::-ms-fill-upper {
         background: #3071a9;
         border: 0.2px solid #010101;
         border-radius: 2.6px;
