--- a/frontend/src/scss/index.scss
+++ b/frontend/src/scss/index.scss
@@ -15,6 +15,8 @@ $theme-colors: (
   failure: #b13e53,
 );
 
+$locked: #b13e53;
+
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -27,6 +29,10 @@ body {
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
         monospace;
+}
+
+.container {
+    border: 2px solid red;
 }
 
 /* finally, import Bootstrap */
