SplashPage turned into bootstrap

--- a/frontend/src/scss/App.scss
+++ b/frontend/src/scss/App.scss
@@ -65,12 +65,12 @@ ul {
 /* Splash Page Specific */
 /* ------------------------- */
 
-#StarterCard {
-    min-width: 200px;
-    max-width: 400px;
-    height: 200px;
-    margin: 8px;
-}
+// #StarterCard {
+//     min-width: 200px;
+//     max-width: 400px;
+//     height: 200px;
+//     margin: 8px;
+// }
 
 /* CSS for model area */
 #ModelAreaCol {
