--- a/frontend/src/scss/App.scss
+++ b/frontend/src/scss/App.scss
@@ -4,6 +4,10 @@
 /* generalized css */
 /* ------------------------- */
 
+#root {
+    min-height: 100vh;
+}
+
 /* element classes */
 ul {
     list-style-type: none;
@@ -59,50 +63,6 @@ ul {
 #PathwayEditorPage {
     height: 100%;
     flex-grow: 1;
-}
-
-/* ------------------------- */
-/* Splash Page Specific */
-/* ------------------------- */
-
-// #StarterCard {
-//     min-width: 200px;
-//     max-width: 400px;
-//     height: 200px;
-//     margin: 8px;
-// }
-
-/* CSS for model area */
-#ModelAreaCol {
-    height: inherit;
-    padding-left: 0px;
-    padding-right: 0px;
-}
-
-.ModelArea {
-    height: inherit;
-    width: inherit;
-    display: flex;
-    background-color: var(--background-color);
-    position: relative;
-}
-
-#PathwayTitleCard {
-    right: 12px;
-    top: 12px;
-    z-index: 99;
-    width: fit-content;
-    height: 150px;
-}
-
-#PathwaySliderBox {
-    left: 12px;
-    top: 12px;
-    z-index: 98;
-    display: flex;
-    height: auto;
-    width: 250px;
-    background-color: var(--element-background-color);
 }
 
 /* ------------------------------------------------------- */
