--- a/frontend/src/scss/App.scss
+++ b/frontend/src/scss/App.scss
@@ -1,35 +1,14 @@
 @import 'index.scss';
 
-/* ------------------------- */
-/* generalized css */
-/* ------------------------- */
-
 #root {
     min-height: 100vh;
 }
 
-/* element classes */
 ul {
     list-style-type: none;
 }
 
-.horizontalUl {
-    display: inline-block;
-}
-
-.pushDown {
-    padding-top: 15px;
-}
-
-.growButton { 
-    transition: all .2s ease-in; 
-
-    &:hover { 
-        transform: scale(1.05); 
-    }
-}
-
-.growCard { 
+.scaleOnHover { 
     transition: all .2s ease-in; 
 
     &:hover { 
@@ -37,121 +16,21 @@ ul {
     }
 }
 
-.ModelAreaChild {
-    position: absolute;
+::-webkit-scrollbar {
+    width: 20px;
 }
 
-.ReactFlow {
-    z-index: 1;
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: $secondary;
+    border-radius: 20px;
+    left: 10px;
 }
 
-.informationalSection {
-    margin-bottom: 32px;
-}
-
-.informationalHeaderSection {
-    margin-left: 32px;
-    margin-right: 32px;
-}
-
-.informationalHeaderSection > h4 {
-    margin-left: 32px;
-    text-align: start;
-}
-
-/* Pathway Editor Page */
-#PathwayEditorPage {
-    height: 100%;
-    flex-grow: 1;
-}
-
-/* ------------------------------------------------------- */
-/* Slider Siderbar Compnent css */
-/* ------------------------------------------------------- */
-.sliderBar {
-    margin: 8px;
-    margin-top: 4px;
-    padding: 8px;
-    height: fit-content;
-}
-
-.sliderBarList {
-    list-style-type: none;
-    height: 400px;
-    /* overflow-y: scroll; */
-    margin: 0px;
-    padding: 0px;
-
-    &::-webkit-scrollbar {
-        width: 20px;
-    }
-
-    &::-webkit-scrollbar-track {
-        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-        background-color: var(--secondary);
-        border-radius: 20px;
-        left: 10px;
-    }
-
-    &::-webkit-scrollbar-thumb {
-        background: var(--tertiary);
-        border-radius: 20px;
-        cursor: grabbing;
-    }
-}
-
-.sliderBarList > li {
-    margin: 8px;
-}
-
-#sliderComponentTitle {
-    padding: 8px;
-    margin: 0px;
-}
-
-#sliderCard {
-    background-color: var(--tertiary);
-}
-
-/* ------------------------------------------------------- */
-/* Slider css */
-/* ------------------------------------------------------- */
-.Slider {
-    height: 150px;
-    border: 4px solid red;
-}
-
-#cardHeaderList {
-    display: flex;
-    list-style-type: none;
-    padding: 0px;
-    background-color: var(--tertiary);
-}
-
-#cardHeaderList {
-    & > li {
-        margin: 4px;
-        display: inline-block;
-
-        & > h4 {
-            margin-left: 8px;
-        }
-
-    }
-}
-
-.cardHeaderDropdownButton {
-    border: none;
-    background-color: inherit;
-}
-
-#cardHeaderCaret {
-    max-width: 12px;
-    height: auto;
-}
-
-#concentrationSlider {
-    box-sizing: border-box;
+::-webkit-scrollbar-thumb {
+    background: $primary;
+    border-radius: 20px;
+    cursor: grabbing;
 }
 
 input[type=range] {
@@ -171,7 +50,7 @@ input[type=range] {
         width: 16px;
         border-radius: 10px;
         margin-top: -12px;
-        background: var(--locked-color);
+        background: $locked;
         cursor: pointer;
     }
 
@@ -180,7 +59,7 @@ input[type=range] {
         height: 8px;
         margin-top: -35px;
         cursor: pointer;
-        background: var(--background-color);
+        background: $secondary;
         border-radius: 4px;
         border: 0.2px solid #010101;
     }
@@ -192,7 +71,7 @@ input[type=range] {
         width: 16px;
         border-radius: 10px;
         margin-top: -12px;
-        background: var(--locked-color);
+        background: $locked;
         cursor: pointer;
     }
 
@@ -201,7 +80,7 @@ input[type=range] {
         height: 8px;
         margin-top: -35px;
         cursor: pointer;
-        background: var(--background-color);
+        background: $secondary;
         border-radius: 4px;
         border: 0.2px solid #010101;
     }
@@ -213,7 +92,7 @@ input[type=range] {
         width: 16px;
         border-radius: 10px;
         margin-top: -12px;
-        background: var(--locked-color);
+        background: $locked;
         cursor: pointer;
     }
 
@@ -222,7 +101,7 @@ input[type=range] {
         height: 8px;
         margin-top: -35px;
         cursor: pointer;
-        background: var(--background-color);
+        background: $secondary;
         border-radius: 4px;
         border: 0.2px solid #010101;
     }
