--- a/frontend/src/scss/CustomNodes.scss
+++ b/frontend/src/scss/CustomNodes.scss
@@ -37,7 +37,10 @@
 
     &.build {
         .react-flow__handle {
+            height: 10px;
+            width: 100px;
             opacity: 50;
+            border-radius: 100%;
         }
     }
 }
