--- a/frontend/src/scss/CustomNodes.scss
+++ b/frontend/src/scss/CustomNodes.scss
@@ -1,5 +1,7 @@
-@import 'index.scss';
-@import '~bootstrap/scss/_variables';
+/**
+    CustomNodes.scss
+*/
+@use 'color';
 
 .react-flow__node {
 
@@ -7,7 +9,7 @@
         font-size: 12px;
         width: 250px;
         height: 100px;
-        background: $orange-400;
+        background: color.$enzyme-color;
         border: 1px solid #555;
         border-radius: 10px;
         text-align: center;
@@ -24,7 +26,7 @@
         border-radius: 40%;
         width: 60px;
         height: 40px;
-        background: $green-300;
+        background: color.$molecule-color;
         border: 1px solid #000000;
         display: flex;
         justify-content: center;
@@ -47,5 +49,5 @@
 }
 
 .locked {
-    border: 5px solid $locked;
+    border: 5px solid color.$locked;
 }
